--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Building a blogging platform",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -15,8 +16,5 @@
   "bugs": {
     "url": "https://github.com/Gagan034/comp-2068-thursday/issues"
   },
-  "homepage": "https://github.com/Gagan034/comp-2068-thursday#readme",
-  "dependencies": {
-    "express": "^4.16.4"
-  }
+  "homepage": "https://github.com/Gagan034/comp-2068-thursday#readme"
 }
