--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comp-2068-thursday",
   "version": "1.0.0",
-  "description": "Building a blogging platform",
+  "description": "A blogging platform",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -9,12 +9,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Gagan034/comp-2068-thursday.git"
+    "url": "git+https://github.com/dantesantos/comp-2068-thursday.git"
   },
   "author": "Gagan Aulakh",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Gagan034/comp-2068-thursday/issues"
+    "url": "https://github.com/dantesantos/comp-2068-thursday/issues"
   },
-  "homepage": "https://github.com/Gagan034/comp-2068-thursday#readme"
+  "homepage": "https://github.com/dantesantos/comp-2068-thursday#readme",
+  "dependencies": {
+    "express": "^4.16.4"
+  }
 }
