--- a/package.json
+++ b/package.json
@@ -9,16 +9,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dantesantos/comp-2068-thursday.git"
+    "url": "git+https://github.com/gcsmckinnon/comp-2068-thursday.git"
   },
-  "author": "Gagan Aulakh",
+  "author": "Shaun McKinnon",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/dantesantos/comp-2068-thursday/issues"
+    "url": "https://github.com/gcsmckinnon/comp-2068-thursday/issues"
   },
-  "homepage": "https://github.com/dantesantos/comp-2068-thursday#readme",
+  "homepage": "https://github.com/gcsmckinnon/comp-2068-thursday#readme",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "mongoose": "^5.5.11",
     "pug": "^2.0.3"
   }
 }
