--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "comp-2068-thursday",
   "version": "1.0.0",
-  "description": "A blogging platform",
+  "description": "A Movie Store",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -18,9 +18,13 @@
   },
   "homepage": "https://github.com/gcsmckinnon/comp-2068-thursday#readme",
   "dependencies": {
+    "bcrypt": "^3.0.6",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
-    "mongoose": "^5.5.11",
-    "pug": "^2.0.3"
+    "express-session": "^1.16.2",
+    "mongoose": "^5.6.2",
+    "pug": "^2.0.4"
   }
 }
