--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/gcsmckinnon/comp-2068-thursday.git"
   },
-  "author": "Shaun McKinnon",
+  "author": "Gagan Aulakh",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/gcsmckinnon/comp-2068-thursday/issues"
